:alembic: Fix chart on iOS, add some styling

--- a/src/kirby/components/chart/chart.component.scss
+++ b/src/kirby/components/chart/chart.component.scss
@@ -1,3 +1,6 @@
 :host {
     display: block;
 }
+.chart-webview {
+    height: 400;
+}
